src/page/style/root.module.css
/* ... */
.header {
    --header-height: 75px;
    height: var(--header-height);
    position: sticky;
    top: 0;
    left: 0;
    width: 100%;
    background-color: var(--logo-second-color);
    z-index: var(--z-fixed);
}

.section {
    margin-bottom: var(--section-margin-bottom);
}

.title {
    font-size: var(--title-fontsize);
    font-weight: 600;
}

.description {
    font-size: var(--description-fontsize);
    color: var(--infoDark-color);
}

.action {
    font-size: var(--action-fontsize);
    color: var(--logo-second-color);
}

/* #region Section 'Universitas' */

.universitas {
    --inner-padding: 2rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
    height: var(--section-height);
    overflow: hidden;
}

.universitas .text {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: var(--inner-padding);
}

.universitas .title {
    margin-bottom: 0.5rem;
}

.universitas .description {
    margin-bottom: 1rem;
}

.universitas .content {
    --icon-size: 65px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    padding: var(--inner-padding);
}

.universitas .content .icons:nth-child(1) {
    margin-top: 90px;
}

.universitas .content .icons:nth-child(3) {
    margin-top: 45px;
}

.universitas .content .icons:nth-child(5) {
    margin-bottom: 90px;
}

.universitas .content .icons .icon {
    width: var(--icon-size);
    height: var(--icon-size);
    padding: .5rem;
    margin-bottom: 1rem;
    background: var(--white-color);
    box-shadow: 0 0.5rem 0.75rem var(--light-color);
    border-radius: 1rem;
    transition: box-shadow var(--transition-default) ease-in-out;
}

.universitas .content .icons .icon:hover {
    box-shadow: none;
}

/* #endregion Section 'Universitas' */

/* #region Section 'Cara Pakai' */

.cara_pakai {
    --inner-padding: 3rem;
    --subtitle-fontsize: 1.7rem;
    --action-fontsize: 1.1rem;
    --section-height: calc(100vh - (2 * var(--base-padding)));
    height: var(--section-height);
    padding: var(--inner-padding);
    overflow: hidden;
    display: grid;
    grid-template-rows: max-content 1fr;
}

.cara_pakai>.title {
    text-align: center;
    margin-bottom: 1rem;
}

.cara_pakai .content {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
}

.cara_pakai .content .overlay {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    z-index: var(--z-tooltip);
}

.cara_pakai .content.active_1 {
    grid-template-columns: 70% 1fr 1fr;
}

.cara_pakai .content.active_2 {
    grid-template-columns: 1fr 70% 1fr;
}

.cara_pakai .content.active_3 {
    grid-template-columns: 1fr 1fr 70%;
}

.cara_pakai .content .wrapper {
    display: grid;
    grid-template-rows: 75% 1fr;
    gap: 1rem;
}

.cara_pakai .content .box {
    position: relative;
    overflow: hidden;
    background-color: var(--logo-second-color);
    border-radius: 2rem;
}

.cara_pakai .content .box.x {
    background-color: var(--secondInverse-shade-1);
}

.cara_pakai .content .box.x .inner {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    overflow: hidden;
    display: grid;
    grid-template-columns: 375px 1fr;
    gap: 1rem;
    padding: 2rem;
    border-radius: inherit;
    perspective: 1000px;
}

.cara_pakai .content .box.x .inner .matkul,
.cara_pakai .content .box.x .inner .matkul_anim,
.cara_pakai .content .box.x .inner .progress_anim {
    border-radius: inherit;
}

.cara_pakai .content .box.x .inner .matkul_anim {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding: 1rem;
    z-index: 1;
}

.cara_pakai .content .box.x .inner .progress_anim {
    display: flex;
    justify-content: center;
    align-items: center;
    transform-origin: bottom right;
}

.cara_pakai .content .box.x .inner .progress_anim>div {
    z-index: 2;
    width: 100%;
    max-width: 325px;
}

.cara_pakai .content .box.y {
    background-color: var(--secondInverse-shade-2);
}

.cara_pakai .content .box.z {
    background-color: var(--secondInverse-shade-3);
}

.cara_pakai .content .box.z .inner {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    border-radius: inherit;
}

.cara_pakai .content .box.z .inner>div {
    width: 100%;
}

.cara_pakai .content .box.z .inner>div:nth-child(1),
.cara_pakai .content .box.z .inner>div:nth-child(3) {
    max-width: 225px;
}

.cara_pakai .content .box.z .inner>div:nth-child(2) {
    max-width: 250px;
}

.cara_pakai .content .details {
    display: grid;
    grid-template-columns: max-content auto;
    gap: .75rem;
    padding: .5rem;
    overflow: hidden;
}

.cara_pakai .content .progress {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 35px;
    height: 35px;
    font-size: var(--action-fontsize);
    font-weight: 500;
    color: var(--dark-color);
    background-color: var(--white-color);
    border: 1px solid var(--lighter-color);
    border-radius: .5rem;
}

.cara_pakai .content .progress.active {
    border: 2px solid var(--dark-color);
}

.cara_pakai .content .box.x~.details .progress.active {
    border: 2px solid var(--secondInverse-shade-1);
}

.cara_pakai .content .box.y~.details .progress.active {
    border: 2px solid var(--secondInverse-shade-2);
}

.cara_pakai .content .box.z~.details .progress.active {
    border: 2px solid var(--secondInverse-shade-3);
}

.cara_pakai .content .text {
    width: 450px;
}

.cara_pakai .content .title {
    font-size: var(--subtitle-fontsize);
    white-space: nowrap;
    margin-bottom: 0;
}

.cara_pakai .content .description {
    text-align: justify;
}
/* ... */

